# Sapphire

./: .gitmodules  CMakeLists.txt  README.md  Tasks.md  data_structures.md
assets/: ToneMapping.fxh  cube.psh  cube.vsh  cube_selection.psh  default_pbr.psh  default_pbr.vsh  font.psh  font.vsh  grid.psh  grid.vsh  materials.mat  rendertarget.psh  select_composit.psh  test.scene
src/: GrimrockModelLoader.cpp  GrimrockModelLoader.h  SapphireApp.cpp  SapphireApp.hpp  config_utils.h  font_system.c  grid.fxh  grimrock.c  renderer.c  sapphire_renderer.h  scene.c  scene.h  testc.c
src/AppBase/: CMakeLists.txt
src/AppBase/include/: InputController.hpp
src/AppBase/src/Win32/: InputControllerWin32.cpp
